@@ -1,66 +1,91 @@
-all: wee63.mbr wee127.mbr
+SRC_C := builtins.c disk_io.c fsys_ext2fs.c fsys_fat.c fsys_ntfs.c
+SRC_S := asm.S wee63start.S
+BUILDROOT := .
+LDFLAGS := 
+
+ifneq ($(WEE127),1)
+OBJDIR := .
+DEFINES := 
+else
+OBJDIR := wee127
+DEFINES := -DMBRSECTORS127
+endif
+
+ifneq ($(BUILDIDUNSUPPORTTED),1)
+LDFLAGS += -Wl,--build-id=none
+BUILDIDUNSUPPORTTED := 0
+endif
+
+OBJS := $(addprefix $(OBJDIR)/,$(subst .c,.o,$(SRC_C))) $(addprefix $(OBJDIR)/,$(subst .S,.o,$(SRC_S)))
+
+
+#all: PRE $(OBJDIR)/wee63.mbr $(OBJDIR)/wee127.mbr POST
+all: wee63 wee127
+
+wee63: $(OBJDIR)/wee63.mbr
+
+wee127:	wee127.mbr
 
 .SUFFIXES: .exec .S .c .o
 
-wee63start: wee63start.o
+#PRE:
+#	@mkdir -p wee127
+#	-rm -f $(BUILDROOT)/wee127.mbr
+
+#POST:
+#	-cp wee127/wee63.mbr $(BUILDROOT)/wee127.mbr
+
+clean:
+	rm -f $(OBJDIR)/*.o $(OBJDIR)/wee63start $(OBJDIR)/pre_stage2
+ifneq ($(WEE127),1)
+	$(MAKE) WEE127=1 clean
+else
+	rm -f $(OBJDIR)/wee63.mbr
+endif
+
+distclean:
+	rm -rf *~ *.o wee63start pre_stage2 wee127
+
+ifneq ($(WEE127),1)
+wee127.mbr: wee127/wee63.mbr
+	cp wee127/wee63.mbr wee127.mbr
+
+wee127/wee63.mbr: $(SRC_C) $(SRC_S) shared.h preset_menu_used
+	$(MAKE) WEE127=1 BUILDIDUNSUPPORTTED=$(BUILDIDUNSUPPORTTED) wee127/wee63.mbr
+endif
+
+.PHONY: all clean distclean wee63 wee127
+
+$(OBJDIR)/%.o: %.c $(BUILDROOT)/shared.h
+	@mkdir -p $(OBJDIR)
+	gcc -Os -fno-stack-protector -fno-builtin -mpreferred-stack-boundary=2 -fomit-frame-pointer -nostdinc -Wall -Wmissing-prototypes -Wunused -Wshadow -Wpointer-arith -Wundef $(DEFINES) -c $*.c -o $(OBJDIR)/$*.o
+
+$(OBJDIR)/%.o: %.S $(BUILDROOT)/shared.h
+	@mkdir -p $(OBJDIR)
+	gcc $(DEFINES) -c $*.S -o $(OBJDIR)/$*.o
+
+$(OBJDIR)/wee63start: $(OBJDIR)/wee63start.o
 	objcopy -O binary $< $@
-pre_stage2: asm.o builtins.o disk_io.o fsys_ext2fs.o fsys_fat.o fsys_ntfs.o
-	gcc -o $@ -nostdlib -Wl,-N -Wl,-Ttext -Wl,308200 -Wl,-N -Wl,--build-id=none asm.o builtins.o disk_io.o fsys_ext2fs.o fsys_fat.o fsys_ntfs.o
+
+$(OBJDIR)/pre_stage2: $(OBJDIR)/asm.o $(OBJDIR)/builtins.o $(OBJDIR)/disk_io.o $(OBJDIR)/fsys_ext2fs.o $(OBJDIR)/fsys_fat.o $(OBJDIR)/fsys_ntfs.o
+	gcc -o $@ -nostdlib -Wl,-N -Wl,-Ttext -Wl,308200 -Wl,-N $(LDFLAGS) $(OBJDIR)/asm.o $(OBJDIR)/builtins.o $(OBJDIR)/disk_io.o $(OBJDIR)/fsys_ext2fs.o $(OBJDIR)/fsys_fat.o $(OBJDIR)/fsys_ntfs.o
 	objcopy -O binary $@
 	echo -n -e "\0260\002\032\0316" >> $@
 
-asm.o: asm.S a20.inc shared.h extra.h
+$(OBJDIR)/wee63start.o: $(BUILDROOT)/wee63start.S $(OBJDIR)/stage2_size.h
 
-builtins.o: builtins.c shared.h extra.h
+$(OBJDIR)/asm.o: $(BUILDROOT)/asm.S $(BUILDROOT)/a20.inc
 
-disk_io.o: disk_io.c shared.h extra.h
+$(OBJDIR)/stage2_size.h: $(OBJDIR)/pre_stage2
+	-rm -f $(OBJDIR)/stage2_size.h
+	set dummy `ls -l $(OBJDIR)/pre_stage2`; \
+	echo "#define STAGE2_SIZE $$6" > $(OBJDIR)/stage2_size.h
 
-fsys_ext2fs.o: fsys_ext2fs.c shared.h extra.h
+$(OBJDIR)/wee63.mbr: $(OBJDIR)/pre_stage2 $(OBJDIR)/wee63start $(BUILDROOT)/preset_menu_used
+	-rm -f $(OBJDIR)/wee63.mbr
+	echo -n -e "\000\000\000\000\000\000\000\000\000\000\000\000" | cat $(OBJDIR)/wee63start $(OBJDIR)/pre_stage2 - > $(OBJDIR)/wee63.mbr
+	if [ -f $(BUILDROOT)/preset_menu_used ]; then echo -n -e "\000" | cat $(BUILDROOT)/preset_menu_used - >> $(OBJDIR)/wee63.mbr ;fi
 
-fsys_fat.o: fsys_fat.c shared.h extra.h
-
-fsys_ntfs.o: fsys_ntfs.c shared.h extra.h
-
-wee63start.o: wee63start.S stage2_size.h
-
-.S.o:
-	gcc -c $<
-
-.c.o:
-	gcc -Os -fno-stack-protector -fno-builtin -mpreferred-stack-boundary=2 -momit-leaf-frame-pointer -nostdinc -Wall -Wmissing-prototypes -Wunused -Wshadow -Wpointer-arith -Wundef -c $<
-
-clean:
-	rm -f *.o wee63start pre_stage2 wee127/*.o wee127/pre_stage2
-
-distclean:
-	rm -rf *~ *.o wee63start pre_stage2 extra.h wee127
-
-wee127.mbr: wee127/wee63.mbr
-	-rm -f $@
-	cp wee127/wee63.mbr $@
-
-wee127/pre_stage2:
-wee127/wee63start:
-wee127/preset_menu_used:
-wee127/wee63.mbr: wee63.mbr wee127/pre_stage2 wee127/wee63start wee127/preset_menu_used
-	if [ -d wee127 ]; then cd wee127; make wee63.mbr; cd ..; else mkdir wee127; cd wee127; ln -s ../a20.inc a20.inc; ln -s ../asm.S asm.S; ln -s ../builtins.c builtins.c; ln -s ../disk_io.c disk_io.c; ln -s ../fsys_ext2fs.c fsys_ext2fs.c; ln -s ../fsys_fat.c fsys_fat.c; ln -s ../fsys_ntfs.c fsys_ntfs.c; ln -s ../Makefile Makefile; ln -s ../preset_menu_used preset_menu_used; ln -s ../shared.h shared.h; ln -s ../wee63start.S wee63start.S; echo "#define MBRSECTORS127" > extra.h; make wee63.mbr; cd ..; fi
-
-.PHONY: all clean distclean
-
-stage2_size.h: pre_stage2
-	-rm -f stage2_size.h
-	set dummy `ls -l pre_stage2`; \
-	echo "#define STAGE2_SIZE $$6" > stage2_size.h
-
-wee63.mbr: pre_stage2 wee63start preset_menu_used
-	-rm -f wee63.mbr
-	echo -n -e "\000\000\000\000\000\000\000\000\000\000\000\000" | cat wee63start pre_stage2 - > wee63.mbr
-	if [ -f ./preset_menu_used ]; then echo -n -e "\000" | cat ./preset_menu_used - >> wee63.mbr ;fi
-
-preset_menu_used:
+$(BUILDROOT)/preset_menu_used:
 	echo File not found: preset_menu_used
 	exit 1
-
-extra.h:
-	touch $@
-
